tests/idris2/perror023/expected
1/1: Building ParseError (ParseError.idr)
Error: Cannot begin a declaration with a reserved identifier.

ParseError:3:1--3:7
 1 | module ParseError
 2 | 
 3 | String : Type
     ^^^^^^

